[package]
name = "gc-gcm"
version = "0.1.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "gcm"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
binread = "1.4.1"
thiserror = "1.0.23"

structopt = { version = "0.3", optional = true }

[features]
bin = ["structopt"]
