[package]
name = "gc-gcm"
version = "0.1.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "gcm"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
thiserror = "1"
binread = "1.4"

structopt = { version = "0.3", optional = true }
memmap = { version = "0.7", optional = true }
rayon = { version = "1.5", optional = true }

[features]
bin = ["structopt", "memmap", "rayon"]
