[package]
name = "gc-gcm"
version = "0.9.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"
description = "A Rust library and CLI for working with GCM/ISO files (raw bit-for-bit disk images) for the Nintendo GameCube."
repository = "https://github.com/jam1garner/gc-gcm"
license = "MIT"
readme = "README.md"

[[bin]]
name = "gcm"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
thiserror = "1"
binread = "1.4"

structopt = { version = "0.3", optional = true }
memmap = { version = "0.7", optional = true }
rayon = { version = "1.5", optional = true }

[features]
bin = ["structopt", "memmap", "rayon"]
no_std = []
